<resources>
    <string name="app_name">AndroidHelper</string>
    <string name="helper">helper</string>
    <string name="current_activity">当前的activity</string>
    <string name="info">info</string>
    <string name="setting">setting</string>
    <string name="float_window_permission">悬浮窗权限</string>
    <string name="float_window_permission_tip">用于显示在其他应用的上层，展示当前应用的信息</string>
    <string name="android_help">Android开发者助手</string>
    <string name="must_permission">必须开启的权限</string>
    <string name="suggest_permission">建议开启的权限</string>
    <string name="open_float_window_permission">已经打开悬浮窗权限</string>
    <string name="please_open_f_w_permission">请开启悬浮窗权限</string>
    <string name="open_float_window">打开悬浮球</string>
    <string name="close_float_window">关闭悬浮球</string>
    <string name="access_service_permission">用于当前应用的页面布局分析等</string>
    <string name="access_service_permission_tip">无障碍辅助服务</string>
    <string name="please_open_a_service">请开启无障碍辅助服务</string>
    <string name="root_permission">AndroidHelper 已被授予超级用户权限</string>
    <string name="root_refuse">AndroidHelper 已被拒绝超级用户权限</string>

</resources>
